--- a/code/test/pro_style.css
+++ b/code/test/pro_style.css
@@ -54,9 +54,10 @@ h1 {
 }
 
 #progress-bar-container li.active:before, #progress-bar-container li:hover:before {
-	border:solid 2px #fff;
+	border:solid 3px #000000;
+	background-color: red;
        	 
-	background: linear-gradient(to right, #E91E63 0%,#fff 100%); 
+	/* background: linear-gradient(to right, red 0%,#fff 100%);  */
 }
 
 #progress-bar-container li {
@@ -106,7 +107,7 @@ h1 {
 }
 
 #progress-bar-container li.active:after {
-	background:#207893;
+	background:#000000;
 }
 
 #progress-bar-container #line {
@@ -126,8 +127,8 @@ h1 {
 	content:" ";
 	width:3%;
 	height:100%;
-	background: #207893;	 
-	background: linear-gradient(to right, #207893 0%,#2ea3b7 100%); 
+	background: #000000;	 
+	/* background: linear-gradient(to right, #207893 0%,#2ea3b7 100%);  */
 	position:absolute;
 	z-index:2;
 	border-radius:50px;
@@ -137,7 +138,7 @@ h1 {
 #progress-content-section {
 	width:90%;
 	margin: auto;
-	background: #f3f3f3;
+	background: #ffffff;
 	border-radius: 4px;
 }
 
