--- a/code/style1.css
+++ b/code/style1.css
@@ -33,12 +33,28 @@ body{
 }
 .section1{
     height: fit-content;
-    width: 95%;
+    /* width: 95%; */
+    /* margin-left: 2.5%; */
+    width: 85%;
+    margin-left: 7.5%;
     background-color: #ffffff;
     border-color: #000000;
     border-style: solid;
     border-width: 5px;
-    margin-left: 2.5%;
+    overflow: hidden;
+    padding: 20px;
+    padding-bottom: 0px;
+}
+.section2{
+    height: 400px;
+    /* width: 95%; */
+    /* margin-left: 2.5%; */
+    width: 80%;
+    margin-left: 10%;
+    background-color: #ffffff;
+    border-color: #000000;
+    border-style: solid;
+    border-width: 5px;
     overflow: hidden;
     padding: 20px;
     padding-bottom: 0px;
@@ -48,9 +64,9 @@ body{
     height: 500px;
     width: 100%;
     background-color: #777;
-    border-color: #000000;
+    /* border-color: #000000;
     border-style: solid;
-    border-width: 5px;
+    border-width: 5px; */
     /* margin-left: 2.5%; */
     overflow: hidden;
 }
@@ -79,4 +95,75 @@ body{
 
 /* @media (max-width: 952px){} */
 
-/* AYA'S WORK */
+
+
+/* AYA'S WORK */ 
+
+/* CHAREF ADDED THIS */
+@media (max-width:890px) {
+    img#optionalstuff {
+      display: none;
+    }
+  }
+
+.article3{
+    display: flex;
+    justify-content: space-between;
+    width: auto;
+}
+.section3{
+    flex: 2;
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    border-style: solid ;
+    border-width: 5px;
+    border-color: black;
+    background-color: #ffffff;
+    width: 75%;
+    height: auto;
+    margin-top: 2%;
+    /* border-radius: 20px;    CHAREF DELETED THIS */
+    margin-left: 10%;
+    padding-right: 2%;
+    padding-left: 2%;
+    margin-bottom: 10px;
+    margin-left: -4%;
+    padding-top: 2%;
+    margin-right: -28px;
+}
+.build{
+    padding-left: 30px;
+    text-align: left;
+    margin-bottom: 10px;
+    flex: 2;
+    height: auto;
+    width: 60%;
+}
+.img9{
+    flex: 1;
+    height: auto;
+    width: 20%;
+    margin-bottom: 25px;
+}
+.img7{
+    flex: 1;
+    height: 4vw;
+    align-self: center;
+    /* margin-left: 20%;  CHAREF DELETED THIS */
+    margin-bottom: 5%;
+}
+
+.img1_2{
+    flex: 0.1;
+    height: 6vw;
+    width: auto;
+    margin-left: 10%;
+}
+.img1_1{
+    flex: 0.1;
+    height: 6vw;
+    width: auto;
+    margin-bottom: -70%;
+    margin-right: 9%;
+}
